<resources>
    <string name="app_name">Android Socket Client</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="msg_status_connecting">Connecting</string>
    <string name="msg_status_connected">Connected</string>
    <string name="msg_status_disconnected">Disconnected</string>
    <string name="error_status_connection">Error connecting to server</string>
    <string name="title_subsidiary">Subsidiary: </string>
    <string name="title_document">Document</string>
    <string name="title_price">Price</string>


</resources>
