<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.socket.david.socketandroidclient.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_connect"/>

    <Button
        android:id="@+id/button_disconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_disconnect"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_connection_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_text_margin"
        android:text="@string/msg_status_disconnected"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/layout_server_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_subsidiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_text_margin"
            android:textStyle="bold"
            android:text="" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_text_margin">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:text="@string/title_document"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/title_price"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_document_list"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>
